--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,26 @@ a:hover {
 /******************************************/
 #principal {
     margin-top: 3.125em;
-    min-height: 28.125em;
+    /*min-height: 28.125em;*/
+}
+
+.espacio {    
+    min-height: calc(100vh - 4.6875em);
+}
+
+/******************************************/
+/* Estilos de producto                    */
+/******************************************/
+#producto {
+    background: -webkit-linear-gradient(90deg, #6859EA 10%, #6ACBE0 90%);
+    background: -moz-linear-gradient(90deg, #6859EA 10%, #6ACBE0 90%);
+    background: linear-gradient(90deg, #6859EA 10%, #6ACBE0 90%);
+    color: #FFFFFF;
+}
+
+.espacio-row {
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
 /******************************************/
